--- a/text-diagram/index.htm
+++ b/text-diagram/index.htm
@@ -9,7 +9,7 @@
     <script language="vbscript">ie = 1</script>
 </head>
 
-<body>
+<body class="body">
     <div id='header'>
         <label>
             <strong>Text Diagram</strong>
@@ -20,7 +20,7 @@
     </div>
 
     <textarea id='src' class='code_box' rows="13" cols="80" style='margin-top:10px;' oninput='javascript:draw();'>
-// Made with https://github.com/weidagang/text-diagram !
+# Made with https://github.com/weidagang/text-diagram !
 object April Todd Monad
 April->April: Prepare food for lunch.
 space 5
